fix software overflow behaviour #27

--- a/src/common.blocks/software-item/software-item.scss
+++ b/src/common.blocks/software-item/software-item.scss
@@ -12,7 +12,7 @@
     background-color: $light-gray;
     max-height: 1.36rem;
     height: 1.772vw;
-    margin: 0.7rem 0 1.3rem 0.059rem;
+    margin: 0.71rem 0 1.3rem 0.059rem;
     max-width: 18rem;
     width: 22.2vw;
 
